--- a/style.css
+++ b/style.css
@@ -6,11 +6,19 @@ body{
 #container{
     height: 384px;
     width: 384px;
+    display: flex;
+    flex-wrap: wrap;
     background-color: bisque;
 }
 
 .square{
     height: 20px;
     width: 20px;
-    border: 2px solid black;
+    border: 2px solid bisque; 
+
 }
+
+.color-change{
+    background-color: aqua;
+}
+
