--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
@@ -8,17 +9,19 @@ body{
     width: 384px;
     display: flex;
     flex-wrap: wrap;
-    background-color: bisque;
+    border: 2px solid bisque;
 }
 
 .square{
     height: 20px;
     width: 20px;
     border: 2px solid bisque; 
-
 }
 
 .color-change{
     background-color: aqua;
 }
 
+#gridInput {
+    margin: 20px 0;
+}
